changed font of name in nav bar

--- a/src/nav/Nav.css
+++ b/src/nav/Nav.css
@@ -1,10 +1,10 @@
+@import url("https://fonts.googleapis.com/css2?family=Rubik&family=Rubik+Moonrocks&display=swap");
 @import url('https://fonts.googleapis.com/css2?family=Londrina+Outline&family=Londrina+Shadow&family=Londrina+Solid:wght@300&display=swap');
 /* font-family: 'Londrina Outline', cursive;
 font-family: 'Londrina Shadow', cursive;
 font-family: 'Londrina Solid', cursive; */
 
 .navlink {
-
   margin: 10px;
   margin-top: 0;
 }
@@ -21,6 +21,7 @@ a:hover {
 
 .b-side-music {
   color: black;
+  font-family: "Rubik";
 }
 
 .nav-bar-component {
