--- a/src/nav/Nav.css
+++ b/src/nav/Nav.css
@@ -19,7 +19,7 @@ a:hover {
   transition: 0.5s ease-in-out;
 }
 
-.b-side-music {
+.title {
   color: black;
   font-family: "Rubik";
 }
@@ -27,7 +27,7 @@ a:hover {
 .nav-bar-component {
   width: 100%;
   background: rgb(34, 193, 195);
-  background: linear-gradient(0deg, rgba(34, 193, 195, 1) 0%, rgba(253, 187, 45, 1) 100%);
+  /* background: linear-gradient(0deg, rgba(34, 193, 195, 1) 0%, rgba(253, 187, 45, 1) 100%); */
   border-bottom: 3px solid white
 }
 
@@ -54,15 +54,13 @@ h1 {
   margin-top: 0;
 }
 
-
-
-.cassette-logo {
+.face {
   height: 120px;
   transition: transform .4s;
   padding: 10px;
 }
 
-.cassette-logo:hover {
+.face:hover {
   transform: scale(1.1);
 }
 
@@ -87,7 +85,7 @@ h1 {
     margin-top: 0;
   }
 
-  .cassette-logo {
+  .face {
     height: 50px;
     padding: 10px;
   }
